--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <link rel="stylesheet" href="/src/style.css" />
+    <title>Vite + Angular</title>
   </head>
   <body>
-    <div id="app"></div>
+    <app-root></app-root>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
